...
    return SingleChildScrollView(
      padding: const EdgeInsets.all(12),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
          TextField(
            key: Key('Input1'),
            decoration: InputDecoration(
              border: OutlineInputBorder(),
              labelText: 'Input #1',
            ),
            controller: _input1Controller,
            keyboardType: TextInputType.numberWithOptions(
...
                  _calculateResult();
                });
              },
            ),
          ),
          TextField(
            key: Key('Input2'),
            decoration: InputDecoration(
              border: OutlineInputBorder(),
              labelText: 'Input #2',
            ),
            controller: _input2Controller,
            keyboardType: TextInputType.numberWithOptions(
...
